--- a/css/variaveis.scss
+++ b/css/variaveis.scss
@@ -1,6 +1,7 @@
 // COLORS
 $main-color: #3379BF;
 $second-color: #e2444e;
+$second-color-hover: #E2333D;
 $feat-grey: #494949;
 $text: #555;
 $border: #ddd;
