set the nav-mobile position to fixed

--- a/css/navigation/nav-mobile.scss
+++ b/css/navigation/nav-mobile.scss
@@ -10,7 +10,8 @@
     flex-direction: column;
     justify-content: space-around;
     background-color: white;
-    position: relative;
+    position: fixed;
+    width: 100%;
     transition: max-height .2s ease-out;
     height: 350px;
     max-height: 350px;
