--- a/css/style.css
+++ b/css/style.css
@@ -467,11 +467,11 @@ footer {
   background-color: #fff;
   border-bottom: solid #3379BF;
   z-index: 1;
-  transition: all .3s; }
+  transition: all .3s;
+  position: fixed; }
   @media (min-width: 768px) {
     .mainHeader {
-      padding: 20px 10px;
-      position: fixed; } }
+      padding: 20px 10px; } }
 
 @media (min-width: 768px) {
   .header_fixed {
@@ -595,7 +595,8 @@ footer {
   flex-direction: column;
   justify-content: space-around;
   background-color: white;
-  position: relative;
+  position: fixed;
+  width: 100%;
   transition: max-height .2s ease-out;
   height: 350px;
   max-height: 350px; }
