--- a/css/layout/slogan.scss
+++ b/css/layout/slogan.scss
@@ -4,13 +4,13 @@
 	width: 280px;
 	text-align: center;
 	line-height: 100%;
-	margin-top: 0;
+	margin-top: 100px;
+	width: 100%;
 
-	@media(min-width: $phone){
+	@media(min-width: $phone) {
 		font-size: 35px;
-		width: 100%;
 	}
-	
+		
 	@media(min-width: $tablet) {
 		font-size: 54px;
 		// text-align: center;
@@ -21,6 +21,7 @@
 		// padding-top: 0;
 		hyphens: auto;
 		line-height: 1.25em;
+		margin-top: 0;
 	}
 }
 
