working on footer

--- a/css/navigation/footer.scss
+++ b/css/navigation/footer.scss
@@ -2,5 +2,11 @@ footer {
 	background-color: $feat-grey;
 	padding: 20px 0;
 	text-align: center;
+}
+
+footer p {
+	
 	color: #fff;
+	font-size: 1em;
+	
 }
