designing footer - not done yet

--- a/css/navigation/footer.scss
+++ b/css/navigation/footer.scss
@@ -1,12 +1,20 @@
 footer {
 	background-color: $feat-grey;
-	padding: 20px 0;
-	text-align: center;
+	padding: 20px;
+	// height: 470px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
 }
 
 footer p {
 	
 	color: #fff;
 	font-size: 1em;
-	
+	text-align: center;
+}
+
+.copy {
+	font-size: 0.75em;
 }
