--- a/css/style.css
+++ b/css/style.css
@@ -456,8 +456,8 @@ a {
     top: 0px; }
 
 footer {
-  background-color: #494949;
-  padding: 20px;
+  background-color: #729ECA;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center; }
@@ -467,8 +467,28 @@ footer p {
   font-size: 1em;
   text-align: center; }
 
-.copy {
-  font-size: 0.75em; }
+.foot-links {
+  margin-bottom: 40px; }
+
+.foot-links p {
+  font-size: 1.2em;
+  text-transform: uppercase;
+  margin: 10px 0 10px 0; }
+
+.foot-contact p {
+  padding: 0px;
+  margin: 0px; }
+
+.foot-social {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 40px 0 40px; }
+
+.copy p {
+  font-size: 0.75em;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  padding-bottom: 0px; }
 
 .mainHeader {
   width: 100%;
