--- a/css/layout/benefits-container.scss
+++ b/css/layout/benefits-container.scss
@@ -1,8 +1,13 @@
 .benefits-item {
 	padding: 20px 10px 0 0;
 	
-	@media(min-width: $phone){
+	@media(width: $tablet){
+		flex-grow: 2;
 		width: 30%;
+	}
+
+	@media(min-width: 375px){
+		margin-left: 30px;
 	}
 	
 	h3{
