--- a/css/layout/parallax.scss
+++ b/css/layout/parallax.scss
@@ -47,6 +47,13 @@
 		height: 500px;
 		p {
 			margin-top: 380px;
+			font-size: 2em;
+		}
+	}
+
+	@media(min-width: $desktop){
+		p {
+			font-size: 2.5em;
 		}
 	}
 }
