--- a/css/global/global.scss
+++ b/css/global/global.scss
@@ -18,11 +18,11 @@ main {
 	@media(min-width: $phone){
 		padding: 10%;
 	}
-	@media(min-width: $tablet){
+	@media(min-width: $tablet) and (max-width: 1024px ){
 		padding: 60px 20px;
+		
 	}
 }
-
 a {
 	text-decoration: none;
 }
