--- a/css/content/typography.scss
+++ b/css/content/typography.scss
@@ -15,7 +15,7 @@ h2.header {
 	text-align: center;
 	margin: 10px 0 15px 0;
 	@media(min-width: $tablet) {
-		margin: 20px 0 30px 0;
+		margin: 20px 0 30px 10px;
 	}
 }
 
