change the form id

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
     width: 355px; } }
 
 @media (min-width: 768px) {
-  #contact-form {
+  #gform {
     padding: 10px;
     width: 300px; } }
 
