add send email functionality

--- a/css/content/typography.scss
+++ b/css/content/typography.scss
@@ -44,3 +44,10 @@ p {
 		font-size: 2.1em;
 	}
 }
+
+#sent-message {
+	font-family: $body-font;
+	color: white;
+	background-color: $main-color;
+	padding: 20px;
+}
