--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,9 @@
 @import 'variaveis';
 
 @import 'content/buttons';
+@import 'content/contact';
 @import 'content/containers';
 @import 'content/float-btn';
-@import 'content/form';
 @import 'content/logo';
 @import 'content/menu';
 @import 'content/modal';
