--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ a {
   text-decoration: none; }
 
 .benefits-item {
-  padding: 20px 10px 0 0;
+  padding: 0 10px 20px 0;
   margin-left: 5%; }
   @media (width: 768px) {
     .benefits-item {
