--- a/css/style.css
+++ b/css/style.css
@@ -510,19 +510,24 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center; }
-
-footer p {
-  color: #fff;
-  font-size: 1em;
-  text-align: center; }
+  footer p {
+    color: #fff;
+    font-size: 1em;
+    text-align: center; }
 
 .foot-links {
   margin-bottom: 40px; }
-
-.foot-links p {
-  font-size: 1.2em;
-  text-transform: uppercase;
-  margin: 10px 0 10px 0; }
+  @media (min-width: 768px) {
+    .foot-links {
+      display: flex; } }
+  .foot-links p {
+    font-size: 1.2em;
+    text-transform: uppercase;
+    margin: 10px 0 10px 0; }
+    @media (min-width: 768px) {
+      .foot-links p {
+        flex-direction: row;
+        margin: 10px 20px; } }
 
 .foot-contact p {
   padding: 0px;
@@ -530,8 +535,14 @@ footer p {
 
 .foot-social {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 30px 40px 0 40px; }
+  @media (min-width: 768px) {
+    .foot-social {
+      width: 250px;
+      align-self: center; } }
+  .foot-social a {
+    margin: 0px; }
 
 .copy p {
   font-size: 0.75em;
