--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ p {
 
 @media (min-width: 768px) {
   * {
-    margin: 0 auto;
+    margin: 0;
     font-weight: 400;
     line-height: 26px; } }
 
@@ -558,7 +558,7 @@ footer {
   border-bottom: solid #3379BF;
   z-index: 1;
   transition: all .3s;
-  position: fixed;
+  position: initial;
   top: 0; }
   @media (min-width: 768px) {
     .mainHeader {
@@ -579,6 +579,12 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between; }
+  @media (min-width: 768px) {
+    .container-top {
+      margin: 0 15px; } }
+  @media (min-width: 992px) {
+    .container-top {
+      margin: 0 50px; } }
 
 .icon {
   font-size: 1.6em;
