fix parallax margins

--- a/css/layout/parallax.scss
+++ b/css/layout/parallax.scss
@@ -44,7 +44,7 @@
 		line-height: 40px;
 	}
 	@media(width: $tablet){
-		width: 800px;
+		// width: 800px;
 	}
 	@media(min-width: $tablet){
 		height: 500px;
