--- a/css/layout/benefits-container.scss
+++ b/css/layout/benefits-container.scss
@@ -1,24 +1,38 @@
-.benefits-item {
-	padding:0 10px 20px 0;
-	margin-left: 5%;
-	
-	@media(width: $tablet){
-		width: 30%;
-		flex-grow: 2;
-	}
-	
+.benefits-container {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	width: 90%;
+	margin: 0 5%;
+
 	@media(min-width: $tablet) {
-		align-self: baseline;
+		width: 90%;
+		margin: 0 5%;
 	}
 
-	@media(min-width: 375px){
-		margin-left: 30px;
+	p {
+		font-size: 15px;
+		text-align: justify;
+		margin: 0 0 10px;
+	}
+}
+
+.benefits-item {
+	
+	@media(min-width: $tablet) {
+		width: 40%;
+		margin: 0 5%;
+		align-self: baseline;
 	}
 	
+	@media(min-width: $wide-screen) {
+		width: 30%;
+		margin: 0;
+	}
+
 	h3{
 		display: inline-flex;
 		font-size: 20px;
-		width: 280px;
 	}
 	
 	img {
